--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,10 +18,12 @@
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+  <link href="https://fonts.googleapis.com/css?family=Nova+Script|PT+Sans:400,400i,700" rel="stylesheet">
+  {{ if and .Site.Params.gitmentOwner (ne .IsHome true) }}
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/gitment.css">
+  {{ end }}
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="/favicon.png">
 
   <!-- RSS -->
