Add GA and modified gitment

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
 	<div class="content container">
 		{{ with .Site.Params.footer }} {{.}} {{ else }} This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>. {{ end }}
 	</div>
+	{{ if .Site.Params.GAID }} {{ partial "ga" . }} {{ end }}
 </body>
 </html>
